Added photo support
