# server/docs/swagger.json
@@ -243,6 +243,9 @@
                 "lookingFor": {
                     "type": "string"
                 },
+                "photoUrl": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
                 }
@@ -265,6 +268,11 @@
         },
         "dto.LoggedInDTO": {
             "type": "object",
+            "required": [
+                "fullname",
+                "id",
+                "username"
+            ],
             "properties": {
                 "birthDate": {
                     "type": "string"
@@ -296,10 +304,30 @@
                 "lookingFor": {
                     "type": "string"
                 },
-                "passwordHash": {
-                    "type": "string"
+                "photos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.PhotoDTO"
+                    }
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PhotoDTO": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "isMain": {
+                    "type": "boolean"
+                },
+                "url": {
                     "type": "string"
                 }
             }
@@ -334,6 +362,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "photoUrl": {
                     "type": "string"
                 },
                 "username": {
@@ -401,6 +432,12 @@
                 },
                 "lookingFor": {
                     "type": "string"
+                },
+                "photos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.PhotoDTO"
+                    }
                 },
                 "username": {
                     "type": "string"
